# android-SDL2-HelloWorld-cmake

./: README.md
app/: build.gradle
app/jni/: CMakeLists.txt  SDL2
app/jni/src/: 52_hello_mobile.cpp  CMakeLists.txt
app/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
